Bug fixes and pattern example
Bug fix:
- Support method extending even on subclasses

Pattern example:
- Showcase opt-in categories per-subclass

--- a/ExtensionPseudoOverrideExperiment/Base.lproj/Main.storyboard
+++ b/ExtensionPseudoOverrideExperiment/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--Extendable View Controller-->
+        <!--Subclass1VC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ExtendableViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="Subclass1VC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
